# cmake-example

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets_VS_generator_example.json  README.md  vcpkg.json
.github/workflows/: ci.yml  clang-format-check.yml
cmake/: Sanitizers.cmake  StaticAnalysis.cmake  Warnings.cmake
docs/: References.md
src/main/: CMakeLists.txt  cache-container.ixx  cache.cpp  cache.ixx  main.cpp  mainclass.cpp  mainclass.h  myclass.cpp  myclass.h
src/mylibrary/: CMakeLists.txt  cache-container.ixx  cache.cpp  cache.ixx  libclass.cpp  libclass.h  libmodule.ixx
test/: CMakeLists.txt  cache_module_test.cpp  factorial_example_test.cpp  factorial_test_example.cpp  libclass_test.cpp  mainclass_test.cpp  myclass_test.cpp
